# dx12_present_barrier

./: .gitignore  CMakeLists.txt  README.md  RenderThread.cpp  RenderThread.h  main.cpp  version.h.in
shaders/: gui_ps.hlsl  gui_vs.hlsl  indicator_vs.hlsl  line_vs.hlsl  ps.hlsl
